--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
             
             <div class="row justify-content-center mt-5 mx-5">
                 <div class="col-md-5 pt-3">
-                    <a href="https://drive.google.com/file/d/1Z5kS93Q7IQgU1Pjs86Kn6j_IldDxRjPD/view?usp=sharing"
-                        target="_blank" rel="noopener noreferrer" class="resume"><strong>View My Resume (Update Tar)
+                    <a href="https://drive.google.com/file/d/15T97gxbRjtRk92QaQ5ywLP3--oTIgT8o/view?usp=sharing"
+                        target="_blank" rel="noopener noreferrer" class="resume"><strong>View My Resume
                             &ensp;</strong><i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="col-sm-5 pt-3 text-end">
