--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                             <i class="uil uil-phone contact_icon"></i>
                             
                             <div>
-                                <h3 class="h3 contact_title">WA / Call Me</h3>
+                                <h3 class="h3 contact_title">WhatsApp / Call Me</h3>
                                 <span class="contact_subtitle">+62-813-7321-3363</span>
                             </div>
                         </div>
