--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                                 <h3 class="portfolio_title">Website For Animal Lovers
                                 </h3>
                                 <p class="portfolio_description">
-                                    Codeigniter, PHP, HTML, JavaScript, CSS, Bootstrap 
+                                    Codeigniter, PHP, HTML, JavaScript, CSS, Bootstrap, SQL 
                                 </p>
                                 <a href="https://phoofolo.000webhostapp.com/" class="button button-flex button-small portfolio_button">
                                     View Website
